// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <fetchusers />
</DocumentFragment>
`;

exports[`should take a snapshot 2`] = `
<DocumentFragment>
  <createuser />
</DocumentFragment>
`;

exports[`should take a snapshot 3`] = `
<DocumentFragment>
  <updateuser />
</DocumentFragment>
`;

exports[`should take a snapshot 4`] = `
<DocumentFragment>
  <deleteuser />
</DocumentFragment>
`;
